@@ -5,10 +5,11 @@ import static org.apache.iceberg.types.Types.NestedField.required;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import java.lang.reflect.Constructor;
 import java.nio.ByteBuffer;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 import org.apache.iceberg.DataFile;
 import org.apache.iceberg.FileFormat;
@@ -39,8 +40,8 @@ public class EventTest {
             StructType.of(),
             UUID.randomUUID(),
             EventType.DATA_FILES,
-            List.of(createDataFile(), createDataFile()),
-            List.of(new TopicAndPartition("topic", 1), new TopicAndPartition("topic", 2)));
+            ImmutableList.of(createDataFile(), createDataFile()),
+            ImmutableList.of(new TopicAndPartition("topic", 1), new TopicAndPartition("topic", 2)));
 
     byte[] data = AvroEncoderUtil.encode(event, event.getSchema());
     Event result = AvroEncoderUtil.decode(data);
@@ -70,7 +71,8 @@ public class EventTest {
 
     PartitionData partitionData =
         new PartitionData(StructType.of(required(999, "type", StringType.get())));
-    Metrics metrics = new Metrics(1L, Map.of(), Map.of(), Map.of(), Map.of());
+    Metrics metrics =
+        new Metrics(1L, ImmutableMap.of(), ImmutableMap.of(), ImmutableMap.of(), ImmutableMap.of());
 
     return (DataFile)
         ctor.newInstance(1, "hi", FileFormat.PARQUET, partitionData, 1L, metrics, null, null, null);
